[package]
name = "genocode-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17.3"
colored = "2.0"
ansi_term = "0.12.1"
